# my-electron-app

./: forge.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vite.main.config.ts  vite.renderer.config.ts
assets/: icon.icns
modules/keyboard-tracker/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
modules/keyboard-tracker/npm/darwin-arm64/: README.md  package.json
modules/keyboard-tracker/npm/darwin-x64/: README.md  package.json
modules/keyboard-tracker/npm/linux-x64-gnu/: README.md  package.json
modules/keyboard-tracker/npm/win32-arm64-msvc/: README.md  package.json
modules/keyboard-tracker/npm/win32-x64-msvc/: README.md  package.json
modules/keyboard-tracker/src/: lib.rs
src/: App.tsx  env.d.ts  main.ts  preload.ts  renderer.tsx
src/components/: ScreenshotGrid.tsx  TimeTracker.tsx  UserActivityTracker.tsx
src/hooks/: useScreenshots.ts  useUserActivity.ts
src/renderer/: App.tsx  electron.d.ts  index.css  index.tsx
src/renderer/components/: Layout.tsx  SettingsPanel.tsx  TimeTracker.tsx
src/renderer/context/: ThemeContext.tsx
src/renderer/hooks/: Layout.tsx  ScreenshotGrid.tsx  useActivityTracker.ts  useScreenshotSettings.ts  useScreenshots.ts  useTimeTracker.ts
src/renderer/pages/: Home.tsx
